--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -89,6 +89,8 @@ jobs:
       - name: Install doc dependencies
         if: steps.deps-cache-macos.outputs.cache-hit != 'true'
         run: esy @doc build-dependencies --release
+      - name: move to `gh-pages` branch
+        run: git checkout -b gh-pages
       - name: Generate docs
         run: esy @doc build --release
       - name: set doc_path
@@ -102,9 +104,8 @@ jobs:
           DOC_PATH: ${{ steps.print_esy_doc_path.outputs.doc_path }}
       - name: Push to gh-pages branch of user fork
         run: |
-          git checkout -b gh-pages
           git status
-          git add *
+          git add -u
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
