--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -95,6 +95,14 @@ jobs:
         run: node .github/workflows/print_docs_path.js
       - name: Generate docs
         run: esy @doc build --release
+      - run: ls ./_esy
+      - run: ls ./_esy/doc
+      - run: ls ./_esy/doc/store
+      - run: ls ./_esy/doc/store/b
+      - run: ls ./_esy/doc/store/b/revery-*
+      - run: ls ./_esy/doc/store/b/revery-*/default
+      - run: ls ./_esy/doc/store/b/revery-*/default/_doc
+      - run: ls ./_esy/doc/store/b/revery-*/default/_doc/_html
       - run: |
           echo $GITHUB_ACTOR $DOC_PATH
           find . -name "*.html"
