--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -103,10 +103,11 @@ jobs:
       - run: ls ./_esy/doc/store/b/revery-*/default
       - run: ls ./_esy/doc/store/b/revery-*/default/_doc
       - run: ls ./_esy/doc/store/b/revery-*/default/_doc/_html
-      - run: |
-          echo $GITHUB_ACTOR $DOC_PATH
-          find . -name "*.html"
-          ls $DOC_PATH
+      - run: echo $GITHUB_ACTOR $DOC_PATH
+        env:
+          DOC_PATH: ${{ steps.print_docs_path.outputs.docs_path }}
+      - run: find . -name "*.html"
+      - run: ls $DOC_PATH
         env:
           DOC_PATH: ${{ steps.print_docs_path.outputs.docs_path }}
       - name: Deploy docs
