--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -66,7 +66,8 @@ jobs:
           git remote set-url --push origin https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY
           git config user.name "Github Runner"
           git config user.email "runner@runner.github.com"
-          git commit -am "Update lockdir"
+          git status
+          git commit -m "Update lockdir"
           git status
           git push origin HEAD:$GITHUB_REF
         env:
