--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -55,10 +55,10 @@ jobs:
       - name: Build dependencies
         if: steps.deps-cache-macos.outputs.cache-hit != 'true'
         run: esy @ci build-dependencies --release
-      - name: Generate opam files
-        run: |
-          esy @ci dune build @check
-          git add *opam
+#      - name: Generate opam files
+#        run: |
+#          esy @ci dune build @check
+#          git add *opam
       - name: format sources files
         run: |
           esy @ci format
