--- a/package.json
+++ b/package.json
@@ -56,13 +56,12 @@
     "reason-sdl2": "^2.10.3016",
     "reason-skia": "github:revery-ui/reason-skia#69743dc",
     "revery-text-wrap": "github:revery-ui/revery-text-wrap#005385c",
-    "timber": "*"
+    "@glennsl/timber": "1.0.0"
   },
   "resolutions": {
     "@esy-ocaml/libffi": "esy-ocaml/libffi#c61127d",
     "esy-cmake": "prometheansacrifice/esy-cmake#2a47392def755",
-    "@opam/cmdliner": "1.0.2",
-    "timber": "glennsl/timber#ae065bb"
+    "@opam/cmdliner": "1.0.2"
   },
   "devDependencies": {
     "ocaml": "~4.8",
