--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "build": [
       "dune build -p Revery -j4"
     ],
+    "buildsInSource": "_build",
     "install": [
       "esy-installer Revery.install",
       "bash -c \"#{os == 'windows' ? 'cp /usr/x86_64-w64-mingw32/sys-root/mingw/bin/*.dll \\'$cur__bin\\'': ':'}\""
@@ -53,7 +54,7 @@
     "reason-harfbuzz": "^1.91.5004",
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
-    "reason-sdl2": "*",
+    "reason-sdl2": "github:revery-ui/reason-sdl2",
     "reason-skia": "github:revery-ui/reason-skia#69743dc",
     "revery-text-wrap": "github:revery-ui/revery-text-wrap#005385c",
     "timber": "*",
@@ -65,7 +66,7 @@
     "@opam/cmdliner": "1.0.2",
     "timber": "glennsl/timber#ae065bb",
     "libscroll": "link:../libscroll-re",
-    "reason-sdl2": "link:../../revery-bryphe/reason-sdl2"
+    "reason-sdl2": "revery-ui/reason-sdl2#a52eee7"
   },
   "devDependencies": {
     "ocaml": "~4.8",
