--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "@opam/lwt_ppx": "^1.1.0",
     "@opam/ppx_deriving": "*",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#34e5991",
-    "flex": "^1.2.2",
+    "flex": "jordwalke/flex",
     "@reason-native/rely": "*",
     "reperf": "^1.4.0",
     "@reason-native/console": "^0.0.3",
-    "reason-font-manager": "^2.0.2",
-    "reason-harfbuzz": "^1.91.5004",
+    "reason-font-manager": "revery-ui/reason-font-manager#c1cea4b",
+    "reason-harfbuzz": "revery-ui/reason-harfbuzz:package.json#8aa486467d6d25d17eb1b3e91597f56f52f2cfc5",
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3016",
