--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@opam/lwt_ppx": "^1.1.0",
     "@opam/ppx_deriving": "*",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#34e5991",
-    "flex": "jordwalke/flex",
+    "flex": "1.2.3",
     "@reason-native/rely": "*",
     "reperf": "^1.4.0",
     "@reason-native/console": "^0.0.3",
@@ -54,7 +54,7 @@
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3016",
-    "reason-skia": "github:revery-ui/reason-skia#69743dc",
+    "reason-skia": "github:revery-ui/reason-skia#fec55ce4d2061896bdb20255a33a5ec2c9aac9e2",
     "revery-text-wrap": "github:revery-ui/revery-text-wrap#005385c",
     "@glennsl/timber": "1.0.0"
   },
