--- a/package.json
+++ b/package.json
@@ -45,17 +45,17 @@
     "@opam/lwt_ppx": "^1.1.0",
     "@opam/ppx_deriving": "*",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#34e5991",
-    "flex": "^1.2.2",
+    "flex": "1.2.3",
     "@reason-native/rely": "*",
     "reperf": "^1.4.0",
     "@reason-native/console": "^0.0.3",
-    "reason-font-manager": "^2.0.2",
-    "reason-harfbuzz": "^1.91.5004",
+    "reason-font-manager": "^2.1.1",
+    "reason-harfbuzz": "^1.91.5007",
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
-    "reason-sdl2": "^2.10.3016",
-    "reason-skia": "github:revery-ui/reason-skia#69743dc",
-    "revery-text-wrap": "github:revery-ui/revery-text-wrap#005385c",
+    "reason-sdl2": "2.10.3016",
+    "reason-skia": "github:revery-ui/reason-skia#fec55ce",
+    "revery-text-wrap": "github:revery-ui/revery-text-wrap#966383e",
     "@glennsl/timber": "1.0.0"
   },
   "resolutions": {
