--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
   "dependencies": {
     "@opam/dune-configurator": "*",
     "@esy-ocaml/reason": "^3.4.0",
-    "@opam/lru": "github:bryphe/lru:lru.opam#2708c70",
+    "@opam/lru": "bryphe/lru:lru.opam#2708c70",
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
     "@opam/ppx_deriving": "*",
-    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#34e5991",
+    "@brisk/brisk-reconciler": "briskml/brisk-reconciler#34e5991",
     "flex": "1.2.3",
     "@reason-native/rely": "*",
     "reperf": "^1.4.0",
@@ -47,10 +47,10 @@
     "reason-font-manager": "^2.1.1",
     "reason-harfbuzz": "^1.91.5007",
     "rench": "^1.9.1",
-    "rebez": "github:jchavarri/rebez#03fa3b7",
+    "rebez": "jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3019",
-    "reason-skia": "github:revery-ui/reason-skia#cc3cfa8",
-    "revery-text-wrap": "github:revery-ui/revery-text-wrap#966383e",
+    "reason-skia": "revery-ui/reason-skia#cc3cfa8",
+    "revery-text-wrap": "revery-ui/revery-text-wrap#966383e",
     "@glennsl/timber": "1.0.0"
   },
   "resolutions": {
@@ -62,6 +62,6 @@
     "ocaml": "~4.8",
     "@opam/merlin": "^3.3.2",
     "@opam/dune": "^1.8.0",
-    "esy-astyle": "github:zbaylin/esy-astyle#59bc21a"
+    "esy-astyle": "zbaylin/esy-astyle#59bc21a"
   }
 }
