--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@opam/lwt_ppx": "^1.1.0",
     "@opam/ppx_deriving": "*",
     "@brisk/brisk-reconciler": "briskml/brisk-reconciler#34e5991",
-    "fetch-native-lwt": "github:lessp/fetch:fetch-native-lwt.json#0774bc9",
+    "fetch-native-lwt": "lessp/fetch:fetch-native-lwt.json#0774bc9",
     "flex": "1.2.3",
     "@reason-native/rely": "*",
     "reperf": "^1.4.0",
@@ -67,6 +67,6 @@
     "ocaml": "~4.8",
     "@opam/dune": "^1.8.0",
     "esy-astyle": "zbaylin/esy-astyle#59bc21a",
-    "@opam/ocaml-lsp-server": "github:ocaml/ocaml-lsp:ocaml-lsp-server.opam#04733ed"
+    "@opam/ocaml-lsp-server": "ocaml/ocaml-lsp:ocaml-lsp-server.opam#04733ed"
   }
 }
