--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-    "name": "revery",
-    "version": "0.30.0",
-    "description": "App toolkit built with Reason",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/bryphe/revery/issues"
+  "name": "revery",
+  "version": "0.30.0",
+  "description": "App toolkit built with Reason",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/bryphe/revery/issues"
+  },
+  "scripts": {
+    "build": "esy b",
+    "build:release": "esy b dune build --profile=release --root . -j4",
+    "test": "esy b dune runtest",
+    "format": "esy #{os == 'windows' ? 'b' : ''} bash .ci/format.sh #{os}",
+    "run": "esy x Examples"
+  },
+  "homepage": "https://github.com/bryphe/revery#readme",
+  "esy": {
+    "buildEnv": {
+      "PKG_CONFIG_PATH": "/usr/lib64/pkgconfig:$PKG_CONFIG_PATH"
     },
-    "scripts": {
-        "build": "esy b",
-        "build:release": "esy b dune build --profile=release --root . -j4",
-        "test": "esy b dune runtest",
-        "format": "esy #{os == 'windows' ? 'b' : ''} bash .ci/format.sh #{os}",
-        "run": "esy x Examples"
+    "exportedEnv": {
+      "PKG_CONFIG_PATH": {
+        "val": "/usr/lib64/pkgconfig:$PKG_CONFIG_PATH",
+        "scope": "global"
+      }
     },
     "build": [
       "dune build -p Revery -j4"
