--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -50,24 +50,22 @@ jobs:
         run: |
           esy format
           git status
-          git diff --exit-code --cached; echo $?
-          git diff --exit-code --cached || [[ "$(git log -1 --pretty=format:'%an')" != "Github Runner" ]] && (git commit -am "format, " || git commit --amend -am "$(git log -1 --pretty=format:'%s')format, ")
+          git diff --exit-code --cached || ([[ "$(git log -1 --pretty=format:'%an')" != "Github Runner" ]] && (git commit -am "format, " || git commit --amend -am "$(git log -1 --pretty=format:'%s')format, "))
           git status
           git log -2
       - name: Push if it is not up to date
         run: |
           git status
           git log -2
-          git branch  -r --contains $(git log  -1 --pretty=format:'%H') || git push origin HEAD:$GITHUB_REF
+          git branch -r --contains $(git log -1 --pretty=format:'%H') || git push origin HEAD:$GITHUB_REF
           git status
           git log -2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Display status should be clean
         run: git status
-        if: success()
       - uses: actions/github-script@0.3.0
-        if: failure() && github.event == 'pull_request'
+        if: github.event == 'pull_request'
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
