--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -43,28 +43,22 @@ jobs:
       - name: Generate opam files
         run: |
           esy build dune build @check
-          git status
           git diff --exit-code --cached || ([[ "$(git log -1 --pretty=format:'%an')" != "Github Runner" ]] && (git commit -am "opam, " || git commit --amend -am "$(git log -1 --pretty=format:'%s')opam, "))
-          git status
-          git log -2
       - name: format sources files
         run: |
           esy format
-          git status
           git diff --exit-code --cached || ([[ "$(git log -1 --pretty=format:'%an')" != "Github Runner" ]] && (git commit -am "format, " || git commit --amend -am "$(git log -1 --pretty=format:'%s')format, "))
-          git status
-          git log -2
       - name: Push if it is not up to date
         run: |
-          git status
-          git log -2
           git branch -r --contains $(git log -1 --pretty=format:'%H') || git push origin HEAD:$GITHUB_REF
-          git status
-          git log -2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Display status should be clean
-        run: git status
+        if: always()
+        run: |
+          git status
+          git log -2
+          git diff
       - uses: actions/github-script@0.3.0
         if: github.event == 'pull_request'
         with:
