Chore: Review fixes

--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -78,7 +78,7 @@ jobs:
         run: npm install -g esy
       - run: brew install coreutils
       - name: Solve doc dependencies
-        run: esy @doc installebug
+        run: esy @doc install
       - name: Print esy cache
         id: print_esy_cache
         run: node .github/workflows/print_esy_cache.js
