--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
   },
   "dependencies": {
     "@opam/dune-configurator": "*",
-    "@esy-ocaml/reason": "3.6.0",
-    "@opam/bos": "0.2.0",
+    "@esy-ocaml/reason": "^3.6.0",
+    "@opam/bos": "^0.2.0",
     "@opam/lru": "bryphe/lru:lru.opam#2708c70",
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
     "@opam/ppx_deriving": "*",
     "@brisk/brisk-reconciler": "briskml/brisk-reconciler#34e5991",
-    "fetch-native-lwt": "0.1.0-alpha.2",
+    "fetch-native-lwt": "^0.1.0-alpha.2",
     "flex": "1.2.3",
     "@reason-native/rely": "*",
     "reperf": "^1.4.0",
