(ci): Use restore-keys

--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -36,7 +36,9 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ steps.print_esy_cache.outputs.esy_cache }}
-          key: macos-latest-${{ hashFiles('**/index.json') }}invalid
+          key: macos-latest-${{ hashFiles('**/index.json') }}
+          restore-keys: |
+            macos-latest-
       - name: Build dependencies
         if: steps.deps-cache-macos.outputs.cache-hit != 'true'
         run: esy build-dependencies --release
@@ -74,7 +76,7 @@ jobs:
 
   doc:
     name: Push docs to GitHub's Pages
-    runs-on: [macos-latest]
+    runs-on: macos-latest
     steps:
       - uses: actions/setup-node@v1.4.2
         with:
@@ -93,7 +95,9 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ steps.print_esy_cache.outputs.esy_cache }}
-          key: macos-latest-4.08-${{ hashFiles('doc.esy.lock/index.json') }}invalid
+          key: macos-latest-${{ hashFiles('**/index.json') }}
+          restore-keys: |
+            macos-latest-
       - name: Install doc dependencies
         if: steps.deps-cache-macos.outputs.cache-hit != 'true'
         run: esy @doc build-dependencies --release
@@ -156,14 +160,18 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ steps.print_esy_cache.outputs.esy_cache }}
-          key: ${{ matrix.os }}-${{ hashFiles('**/index.json') }}invalid
+          key: ${{ matrix.os }}-${{ hashFiles('**/index.json') }}
+          restore-keys: |
+            ${{ matrix.os }}-
       - name: Try to restore dependencies cache
         if: matrix.os == 'windows-latest'
         id: deps-cache-win
         uses: actions/cache@v1
         with:
           path: ${{ steps.print_esy_cache.outputs.esy_cache }}
-          key: ${{ matrix.os }}-${{ hashFiles('**\index.json') }}invalid
+          key: ${{ matrix.os }}-${{ hashFiles('**\index.json') }}
+          restore-keys: |
+            ${{ matrix.os }}-
       - name: Build dependencies
         if: steps.deps-cache-win.outputs.cache-hit != 'true' && steps.deps-cache-non-win.outputs.cache-hit != 'true'
         run: esy build-dependencies --release
@@ -171,4 +179,7 @@ jobs:
         run: esy build --release
       - name: Build test/dev dependencies
         if: steps.deps-cache-win.outputs.cache-hit != 'true' && steps.deps-cache-non-win.outputs.cache-hit != 'true'
-        run: esy build-dependencies
+        run:
+          esy build-dependencies
+          # We might have used restore-keys
+          esy cleanup .
