--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "reason-harfbuzz": "^1.91.5007",
     "rench": "^1.9.1",
     "rebez": "jchavarri/rebez#03fa3b7",
-    "reason-sdl2": "^2.10.3022",
+    "reason-sdl2": "^2.10.3023",
     "reason-skia": "revery-ui/reason-skia#6b459c7",
     "revery-text-wrap": "revery-ui/revery-text-wrap#966383e",
     "@glennsl/timber": "1.0.0"
@@ -60,6 +60,6 @@
     "ocaml": "~4.8",
     "@opam/dune": "^1.8.0",
     "esy-astyle": "zbaylin/esy-astyle#59bc21a",
-    "@opam/ocaml-lsp-server": "github:ocaml/ocaml-lsp:ocaml-lsp-server.opam#04733ed"
+    "@opam/ocaml-lsp-server": "ocaml/ocaml-lsp:ocaml-lsp-server.opam#04733ed"
   }
 }
